# agora-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 0007_log_embeddings_pgvector.py  0009_org_installation_id.py  0010_chat_messages.py
app/: main.py
app/api/: events.py
app/api/v1/: router.py
app/api/v1/routes/: analytics.py  auth.py  chat.py  orgs.py  remediations.py  runs.py
app/core/: config.py  scrubber.py
app/models/: chat_message.py  organization.py
app/schemas/: organization.py
app/services/: bedrock_client.py  embeddings.py  github.py  github_app.py
tests/: test_runs_endpoint.py
